src/Tooltip/TooltipContent.scss
@import '../common.scss';

$min-width: 72px;
$max-width: 264px;
$font-size: 14px;
$line-height: 1.29;
$padding: 18px;
$opacity: 0.96;
$border-radius: 8px;
$shadow-color: rgba(0, 0, 0, 0.2);
$shadow: 0 0 11px 0 $shadow-color;

.tooltip {
  @include FontRoman;
  position: absolute;
  display: inline-block;
  min-width: $min-width;
  max-width: $max-width;
  border-radius: $border-radius;
  padding: $padding;
  font-size: $font-size;
  line-height: $line-height;
  opacity: $opacity;
  box-shadow: $shadow;
  -webkit-font-smoothing: antialiased;
  &.light {
    color: $D10;
    background: $D80;
  }
  &.dark {
    color: $D80;
    background: $D10;
  }
}

.arrow {
  position: absolute;
  height: 10px;
  width: 10px;
  transform: rotateZ(45deg);
  background: inherit;
  &.bottom, &.top {
    left: 50%;
    margin-left: -7px;
  }
  &.bottom {
    bottom: -4px;
    box-shadow: 3px 3px 6px rgba(0, 0, 0, .1);
  }
  &.top {
    top: -4px;
    box-shadow: -3px -3px 6px rgba(0, 0, 0, .1);
  }
  &.left, &.right {
    top: 50%;
    margin-top: -5px;
  }
  &.right {
    right: -5px;
    box-shadow: 3px -3px 6px rgba(0, 0, 0, .1);
  }
  &.left {
    left: -5px;
    box-shadow: -3px 3px 6px rgba(0, 0, 0, .1);
  }
}

.flyin-on-left   { animation: flyInOnRight  .5s ease both; }
.flyin-on-right  { animation: flyInOnLeft   .5s ease both; }
.flyin-on-top    { animation: flyInOnBottom .5s ease both; }
.flyin-on-bottom { animation: flyInOnTop    .5s ease both; }

.bounce-on-top, .bounce-on-bottom { animation: bounceVertically   .5s ease infinite; }
.bounce-on-left, .bounce-on-right { animation: bounceHorizontally .5s ease infinite; }

@keyframes flyInOnTop {
  from {
    opacity: 0;
    margin-top: -50px;
  }
  to {
    opacity: 1;
    margin-top: 0;
  }
}

@keyframes flyInOnBottom {
  from {
    opacity: 0;
    margin-top: 50px;
  }
  to {
    opacity: 1;
    margin-top: 0;
  }
}

@keyframes flyInOnLeft {
  from {
    opacity: 0;
    margin-left: -50px;
  }
  to {
    opacity: 1;
    margin-left: 0;
  }
}

@keyframes flyInOnRight {
  from {
    opacity: 0;
    margin-left: 50px;
  }
  to {
    opacity: 1;
    margin-left: 0;
  }
}

@keyframes bounceVertically {
  0% {
    margin-top: 0;
  }
  50% {
    margin-top: -20px;
  }
  100% {
    margin-top: 0;
  }
}

@keyframes bounceHorizontally {
  0% {
    margin-left: 0;
  }
  50% {
    margin-left: -20px;
  }
  100% {
    margin-left: 0;
  }
}

